2006-02-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: use a normal toplevel window for
	the plug-in dialog. Moved the Help button to the toolbar. Use a
	toggle action for Play.

2006-02-25  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpstock.h: added a define for GIMP_STOCK_DETACH
	to the list of missing icons.

	* app/actions/dockable-actions.c: use GIMP_STOCK_DETACH instead of
	GTK_STOCK_CONVERT.

	* plug-ins/common/animationplay.c: unveiled a long-standing secret
	feature of the Animation Playback plug-in by. Needs more love.

2006-02-25  Sven Neumann  <sven@gimp.org>

	* app/dialogs/quit-dialog.c (quit_close_all_dialog_container_changed):
	default to GTK_RESPONSE_CANCEL.

2006-02-25  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c (remap_indexed_layer): fixed bug
	introduced by optimization (bug #332324).

2006-02-25  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c (generate_histogram_gray): only
	count pixels with an alpha value > 127.

2006-02-24  Sven Neumann  <sven@gimp.org>

	* app/config/gimprc.c (gimp_rc_save)
	* app/gui/session.c (session_save): s/The GIMP/GIMP/

2006-02-24  Simon Budig  <simon@gimp.org>

	* app/base/lut-funcs.c: change the LUT function for the contrast.
	Fixes the buggy behaviour as described in bug #319872 and
	bug #332068 and makes the behaviour consistent with the standard
	contrast formula. However, I am leaving the bug open to discuss
	further improvements.

	Untabbified.

2006-02-23  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpwire.[ch]: added utility functions to send
	GimpRGB values over the wire.

	* libgimpbase/gimpprotocol.c: use the new functions.

2006-02-22  Simon Budig  <simon@gimp.org>

	* app/vectors/gimpvectors-import.c: fix the import of svg circles.

2006-02-21  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-data.[ch]: new files which keep the
	plug-in data list.
