@@ -1,3 +1,8 @@
+2006-02-26  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpdrawablepreview.c: added "drawable" as construct-only
+	property so that the widget can be constructed using g_object_new().
+
 2006-02-25  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/animationplay.c: use a normal toplevel window for
